1042 fixed filtering by status in classic mode

--- a/app/views/accounts/_account.html.erb
+++ b/app/views/accounts/_account.html.erb
@@ -5,9 +5,9 @@
       <%= render partial: 'resource_summary', locals: { name: account.name, background_color: 'bg-green-700' } %>
       <div class="space-y-1.5">
         <div class="text-base/6 font-semibold dark:text-white">
-          <%= link_to highlight(account.name, params.dig(:q, :name_or_description_cont)), edit_account_path(account) %>
+          <%= link_to highlight(account.name, params.dig(:q, :name_or_description_cont)), account_path(account), data: { turbo: false } %>
         </div>
-        <div class="text-xs/6 text-zinc-500">
+        <div class="text-xs/6 text-zinc-500 min-h-4">
           <%= highlight(account.description, params.dig(:q, :name_or_description_cont)) %>
         </div>
         <div class="text-xs/6 text-zinc-600">
