--- a/app/views/accounts/_form.html.erb
+++ b/app/views/accounts/_form.html.erb
@@ -1,81 +1,92 @@
-<%= form_for(@account, role: 'form', html: { class: 'form-horizontal record-form space-y-6' }) do |f| %>
-  <%#= form_header(@account) %>
+<div class="mx-auto max-w-6xl">
+  <%= form_for(account, html: { role: 'form' }) do |form| %>
+    <%= render 'form_header', record: account %>
+    <%= render 'form_body' do %>
+      <%= render 'section' do %>
+        <%= render 'section_header', title: 'Overview', subtitle: 'General settings this account.' %>
+        <%= render 'section_body' do %>
+          <div class="sm:col-span-4">
+            <%= form.label :name %>
+            <div class="mt-2">
+              <%=
+                form.text_field(:name, placeholder: 'Account name', autofocus: true, required: true)
+              %>
+            </div>
+          </div>
 
-  <div class="flex items-center">
-    <%= f.label :name, class: 'w-1/3 text-right pr-4' %>
-    <div class="w-2/3">
-      <%= f.text_field :name %>
-    </div>
-  </div>
+          <div class="sm:col-span-4">
+            <%= form.label :description  %>
+            <div class="mt-2">
+              <%= form.text_area :description %>
+            </div>
+          </div>
 
-  <div class="flex items-center">
-    <%= f.label :description, class: 'w-1/3 text-right pr-4' %>
-    <div class="w-2/3">
-      <%= f.text_area :description %>
-    </div>
-  </div>
+        <% end %>
+      <% end %>
 
-  <div class="flex items-center">
-    <%= f.label :welcome_message, class: 'w-1/3 text-right pr-4' %>
-    <div class="w-2/3">
-      <%= f.text_area :welcome_message %>
-    </div>
-  </div>
+      <%= render 'section' do %>
+        <%= render 'section_header', title: 'Status', subtitle: 'Activation and expiration settings for this account' %>
+        <%= render 'section_body' do %>
+          <% if policy(@account).update_protected_attributes? %>
+            <div class="sm:col-span-4">
+              <%= form.label :deactivated %>
+              <div class="mt-2">
+                <%= form.checkbox :deactivated %>
+              </div>
+            </div>
 
-  <% if policy(@account).update_protected_attributes? %>
-    <div class="flex items-center">
-      <%= f.label :expires_on, class: 'w-1/3 text-right pr-4' %>
-      <div class="w-2/3">
-        <%= f.text_field :expires_on, class: 'form-input block w-full', data: { behaviour: "datepicker" } %>
-      </div>
-    </div>
+            <div class="sm:col-span-4">
+              <%= form.label :expires_on %>
+              <div class="mt-2">
+                <%= form.date_field :expires_on %>
+              </div>
+            </div>
 
-    <div class="flex items-center">
-      <%= f.label :expiry_warning_sent_on, class: 'w-1/3 text-right pr-4' %>
-      <div class="w-2/3">
-        <%= f.text_field :expiry_warning_sent_on, class: 'form-input block w-full', readonly: true %>
-      </div>
-    </div>
+            <div class="sm:col-span-4">
+              <%= form.label :expiry_warning_sent_on %>
+              <div class="mt-2">
+                <%= form.date_field :expiry_warning_sent_on, readonly: true, disabled: true %>
+              </div>
+            </div>
+          <% end %>
+        <% end %>
+      <% end %>
 
-    <div class="flex items-center">
-      <%= f.label :max_users, class: 'w-1/3 text-right pr-4' %>
-      <div class="w-2/3">
-        <%= f.text_field :max_users, class: 'form-input block w-full' %>
-      </div>
-    </div>
+      <%= render 'section' do %>
+        <%= render 'section_header', title: 'Restrictions', subtitle: 'Limits to number of team members and impact cards' %>
+        <%= render 'section_body' do %>
+          <% if policy(@account).update_protected_attributes? %>
+            <div class="sm:col-span-4">
+              <%= form.label :max_users, "Max team members" %>
+              <div class="mt-2">
+                <%= form.number_field :max_users, min: 0 %>
+              </div>
+              <p class="text-sm/6 text-gray-600">Set to zero (0) to indicate unlimited team members.</p>
+            </div>
 
-    <div class="flex items-center">
-      <%= f.label :max_scorecards, "Max #{Scorecard.model_name.human.pluralize.downcase}", class: 'w-1/3 text-right pr-4' %>
-      <div class="w-2/3">
-        <%= f.text_field :max_scorecards, class: 'form-input block w-full' %>
-      </div>
-    </div>
+            <div class="sm:col-span-4">
+              <%= form.label :max_scorecards, 'Max impact ards' %>
+              <div class="mt-2">
+                <%= form.number_field :max_scorecards, min: 0 %>
+              </div>
+              <p class="text-sm/6 text-gray-600">Set to zero (0) to indicate unlimited impact cards.</p>
+            </div>
+          <% end %>
+        <% end %>
+      <% end %>
 
-    <div class="flex items-center">
-      <div class="w-1/3 text-right pr-4">
-        <%= label :solution_ecosystem_maps, 'Solution Ecosystem Map?' %>
-      </div>
-      <div class="w-2/3 mt-1">
-        <%= f.check_box :solution_ecosystem_maps, class: 'form-checkbox' %>
-      </div>
-    </div>
-
-    <div class="flex items-center">
-      <div class="w-1/3 text-right pr-4">
-        <label>Allow Transition Cards?</label>
-      </div>
-      <div class="w-2/3 mt-1">
-        <%= f.check_box :allow_transition_cards, class: 'form-checkbox' %>
-      </div>
-    </div>
-
-    <div class="flex items-center">
-      <div class="w-1/3 text-right pr-4">
-        <label>Allow SDG Goal Alignment Cards?</label>
-      </div>
-      <div class="w-2/3 mt-1">
-        <%= f.check_box :allow_sustainable_development_goal_alignment_cards, class: 'form-checkbox' %>
-      </div>
-    </div>
+      <%= render 'section' do %>
+        <%= render 'section_header', title: 'Other Settings' %>
+        <%= render 'section_body' do %>
+          <div class="sm:col-span-4">
+            <%= form.label :classic_grid_mode %>
+            <div class="mt-2">
+              <%= form.checkbox :classic_grid_mode %>
+            </div>
+          </div>
+        <% end %>
+      <% end %>
+      <%= render 'form_buttons', form:, cancel_path: account.persisted? ? account_path(account) : accounts_path %>
+    <% end %>
   <% end %>
-<% end %>
+</div>
