--- a/app/views/organisations/_form.html.erb
+++ b/app/views/organisations/_form.html.erb
@@ -7,8 +7,9 @@
         <%= render 'section_body' do %>
           <div class="sm:col-span-4">
             <%= form.label :name %>
-            <div class="mt-2"><%= form.text_field(:name, placeholder: 'Stakeholder name', autofocus: true, required: true) %>
-</div>
+            <div class="mt-2">
+              <%= form.text_field(:name, placeholder: 'Stakeholder name', autofocus: true, required: true) %>
+            </div>
           </div>
 
           <div class="col-span-full">
