--- a/app/views/accounts/_form.html.erb
+++ b/app/views/accounts/_form.html.erb
@@ -65,7 +65,7 @@
             </div>
 
             <div class="sm:col-span-4">
-              <%= form.label :max_scorecards, 'Max impact ards' %>
+              <%= form.label :max_scorecards, 'Max impact cards' %>
               <div class="mt-2">
                 <%= form.number_field :max_scorecards, min: 0 %>
               </div>
