--- a/app/views/accounts/show.html.erb
+++ b/app/views/accounts/show.html.erb
@@ -15,7 +15,13 @@
           </div>
         </div>
         <div class="relative">
-          <div class="flex justify-end items-center mb-4">
+          <div class="flex justify-end items-center mb-4  gap-4">
+            <% if @account == current_account %>
+              <span class="text-xs/6 text-zinc-600">Current account</span>
+            <% else %>
+              <%= link_to_primary 'Switch To', switch_account_path(@account), class: 'inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500' %>
+            <% end %>
+
             <%= link_to_primary 'Edit', edit_account_path(@account), class: 'inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500' %>
           </div>
         </div>
@@ -24,22 +30,57 @@
   </div>
   <hr role="presentation" class="my-10 mt-6 w-full border-t border-zinc-950/10 dark:border-white/10">
   <%= render 'section' do %>
-    <%= render 'section_header', title: 'Account Status' %>
+    <%= render 'section_header', title: 'Overview' %>
       <%= render 'section_body' do %>
-      <div class="sm:col-span-4">
-
+      <div class="sm:col-span-8">
         <div class="w-full">
-          <dl class="grid grid-cols-1 text-base/6 sm:grid-cols-[min(50%,theme(spacing.80))_auto] sm:text-sm/6">
-            <dt class="col-start-1 border-t border-zinc-950/5 pt-3 text-zinc-500 first:border-none sm:border-t sm:border-zinc-950/5 sm:py-3 dark:border-white/5 dark:text-zinc-400 sm:dark:border-white/5">Expires On</dt><dd class="pb-3 pt-1 text-zinc-950 sm:border-t sm:border-zinc-950/5 sm:py-3 dark:text-white dark:sm:border-white/5 sm:[&amp;:nth-child(2)]:border-none"><%= @account.expires_on %></dd>
-            <dt class="col-start-1 border-t border-zinc-950/5 pt-3 text-zinc-500 first:border-none sm:border-t sm:border-zinc-950/5 sm:py-3 dark:border-white/5 dark:text-zinc-400 sm:dark:border-white/5">Event</dt><dd class="pb-3 pt-1 text-zinc-950 sm:border-t sm:border-zinc-950/5 sm:py-3 dark:text-white dark:sm:border-white/5 sm:[&amp;:nth-child(2)]:border-none">Bear Hug: Live in Concert</dd>
-            <dt class="col-start-1 border-t border-zinc-950/5 pt-3 text-zinc-500 first:border-none sm:border-t sm:border-zinc-950/5 sm:py-3 dark:border-white/5 dark:text-zinc-400 sm:dark:border-white/5">Amount</dt><dd class="pb-3 pt-1 text-zinc-950 sm:border-t sm:border-zinc-950/5 sm:py-3 dark:text-white dark:sm:border-white/5 sm:[&amp;:nth-child(2)]:border-none">$150.00 USD</dd>
-            <dt class="col-start-1 border-t border-zinc-950/5 pt-3 text-zinc-500 first:border-none sm:border-t sm:border-zinc-950/5 sm:py-3 dark:border-white/5 dark:text-zinc-400 sm:dark:border-white/5">Amount after exchange rate</dt><dd class="pb-3 pt-1 text-zinc-950 sm:border-t sm:border-zinc-950/5 sm:py-3 dark:text-white dark:sm:border-white/5 sm:[&amp;:nth-child(2)]:border-none">US$150.00 → CA$199.79</dd>
-            <dt class="col-start-1 border-t border-zinc-950/5 pt-3 text-zinc-500 first:border-none sm:border-t sm:border-zinc-950/5 sm:py-3 dark:border-white/5 dark:text-zinc-400 sm:dark:border-white/5">Fee</dt><dd class="pb-3 pt-1 text-zinc-950 sm:border-t sm:border-zinc-950/5 sm:py-3 dark:text-white dark:sm:border-white/5 sm:[&amp;:nth-child(2)]:border-none">$4.79 USD</dd>
-            <dt class="col-start-1 border-t border-zinc-950/5 pt-3 text-zinc-500 first:border-none sm:border-t sm:border-zinc-950/5 sm:py-3 dark:border-white/5 dark:text-zinc-400 sm:dark:border-white/5">Net</dt><dd class="pb-3 pt-1 text-zinc-950 sm:border-t sm:border-zinc-950/5 sm:py-3 dark:text-white dark:sm:border-white/5 sm:[&amp;:nth-child(2)]:border-none">$1,955.00</dd>
+          <dl class="grid grid-cols-1 text-base/6 sm:grid-cols-[min(60%,theme(spacing.80))_auto] sm:text-sm/6">
+            <%= definition_list_element('Description', @account.description) %>
           </dl>
         </div>
       </div>
+    <% end %>
+  <% end %>
 
+  <%= render 'section' do %>
+    <%= render 'section_header', title: 'Status' %>
+      <%= render 'section_body' do %>
+      <div class="sm:col-span-8">
+        <div class="w-full">
+          <dl class="grid grid-cols-1 text-base/6 sm:grid-cols-[min(60%,theme(spacing.80))_auto] sm:text-sm/6">
+            <%= definition_list_element('Deactivated', @account.deactivated) %>
+            <%= definition_list_element('Expires on', @account.expires_on) %>
+            <%= definition_list_element('Expiry warning sent on', @account.expiry_warning_sent_on) %>
+          </dl>
+        </div>
+      </div>
+    <% end %>
+  <% end %>
+
+  <%= render 'section' do %>
+    <%= render 'section_header', title: 'Restrictions' %>
+      <%= render 'section_body' do %>
+      <div class="sm:col-span-8">
+        <div class="w-full">
+          <dl class="grid grid-cols-1 text-base/6 sm:grid-cols-[min(60%,theme(spacing.80))_auto] sm:text-sm/6">
+            <%= definition_list_element('Max team members', @account.max_users) %>
+            <%= definition_list_element('Max impact cards', @account.max_scorecards) %>
+          </dl>
+        </div>
+      </div>
+    <% end %>
+  <% end %>
+
+  <%= render 'section' do %>
+    <%= render 'section_header', title: 'Other Settings' %>
+      <%= render 'section_body' do %>
+      <div class="sm:col-span-8">
+        <div class="w-full">
+          <dl class="grid grid-cols-1 text-base/6 sm:grid-cols-[min(60%,theme(spacing.80))_auto] sm:text-sm/6">
+            <%= definition_list_element('Classic grid mode', @account.classic_grid_mode) %>
+          </dl>
+        </div>
+      </div>
     <% end %>
   <% end %>
 </div>
