--- a/app/views/impact_cards/_summary.html.erb
+++ b/app/views/impact_cards/_summary.html.erb
@@ -5,7 +5,12 @@
       <div class="flex flex-wrap items-center gap-x-4 gap-y-2">
         <h1 class="text-2xl/8 font-semibold text-zinc-950 sm:text-xl/8 dark:text-white"><%= impact_card.name %></h1>
       </div>
-      <div class="mt-2 text-sm/6 text-zinc-500"><%= impact_card.description %></div>
+      <div class="mt-2 text-sm/6 text-zinc-500"><%= sanitize(impact_card.description) %></div>
+    </div>
+    <div class="relative">
+      <div class="flex justify-end items-center mb-4">
+        <%= link_to_primary 'Edit', edit_impact_card_path(impact_card), class: 'inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500' %>
+      </div>
     </div>
   </div>
 </div>
