--- a/app/views/impact_cards/edit.html.erb
+++ b/app/views/impact_cards/edit.html.erb
@@ -35,11 +35,11 @@
               <p class="text-sm/6 text-gray-600">This action cannot be undone. This will permanently delete the impact card and all associated data.</p>
               <div class="flex justify-end">
                 <%=
-                  link_to(
-                    'Delete Card',
-                    impact_card_path(@scorecard),
-                    method: :delete,
-                    data: { confirm: 'Are you sure you want to delete this impact card?' },
+                  button_tag(
+                    "Delete Card",
+                    type: :submit,
+                    data: { confirm: 'Are you sure?' },
+                    form: "delete_impact_card",
                     class: 'rounded-md bg-zinc-950 dark:bg-zinc-400 px-3 py-2 text-sm font-semibold text-white shadow-sm flex items-center space-x-2 text-red-600 hover:text-red-800'
                   )
                 %>
@@ -101,7 +101,8 @@
 
       <%= render 'form_buttons', form:, cancel_path: @scorecard.persisted? ? impact_card_path(@scorecard) : impact_cards_path %>
     <% end %>
-
-
   <% end %>
+
+  <%= form_with model: @scorecard, url: impact_card_path(@scorecard), method: :delete, data: { turbo: false }, scope: :impact_card, id: "delete_impact_card" %>
 </div>
+
