--- a/app/views/impact_cards/_sharing.html.erb
+++ b/app/views/impact_cards/_sharing.html.erb
@@ -43,13 +43,7 @@
       </div>
     <% else %>
       <div class="sm:col-span-4">
-        <%= form.label :shared_link_id %>
-        <div class="mt-2">
-          <span class="inline-flex items-center px-3 py-1 text-sm font-semibold leading-5 text-white bg-indigo-600 rounded-full">
-            Sharing not enabled
-          </span>
-
-        </div>
+        <p class="mt-1 text-sm/6 text-gray-600">Sharing data is missing</p>
       </div>
     <% end %>
   <% end %>
