--- a/app/views/impact_cards/edit.html.erb
+++ b/app/views/impact_cards/edit.html.erb
@@ -24,85 +24,14 @@
         <% end %>
       <% end %>
 
-      <%= render 'sharing', impact_card: @scorecard %>
-
-      <%= render 'section' do %>
-        <%= render 'section_header', title: 'Danger Zone' %>
-        <%= render 'section_body', class: 'border border-red-500 rounded-lg gap-y-0' do %>
-          <div class="sm:col-span-6 border-b border-gray-900 p-4">
-            <%= custom_label_tag 'Delete this impact card card' %>
-            <div class="mt-2">
-              <p class="text-sm/6 text-gray-600">This action cannot be undone. This will permanently delete the impact card and all associated data.</p>
-              <div class="flex justify-end">
-                <%=
-                  button_tag(
-                    "Delete Card",
-                    type: :submit,
-                    data: { confirm: 'Are you sure?' },
-                    form: "delete_impact_card",
-                    class: 'rounded-md bg-zinc-950 dark:bg-zinc-400 px-3 py-2 text-sm font-semibold text-white shadow-sm flex items-center space-x-2 text-red-600 hover:text-red-800'
-                  )
-                %>
-              </div>
-            </div>
-          </div>
-
-          <div class="sm:col-span-6 border-b border-gray-900 p-4">
-
-            <% if @scorecard.shared_link_id.present? %>
-              <%= custom_label_tag 'Disable sharing' %>
-              <div class="mt-2">
-                <p class="text-sm/6 text-gray-600">Remove third party access.</p>
-                <div class="flex justify-end">
-                  <%=
-                    link_to 'Disable Sharing',
-                    impact_card_path(@scorecard),
-                    method: :post,
-                    data: { confirm: 'Are you sure you want to delete this impact card?' },
-                    class: 'rounded-md bg-zinc-950 dark:bg-zinc-400 px-3 py-2 text-sm font-semibold text-white shadow-sm flex items-center space-x-2 text-red-600 hover:text-red-800'
-                  %>
-                </div>
-              </div>
-            <% else %>
-              <%= custom_label_tag 'Enable sharing' %>
-              <div class="mt-2">
-                <p class="text-sm/6 text-gray-600">Allow third party access.</p>
-                <div class="flex justify-end">
-                  <%=
-                    link_to 'Enable Sharing',
-                    impact_card_path(@scorecard),
-                    method: :delete,
-                    data: { confirm: 'Are you sure you want to delete this impact card?' },
-                    class: 'rounded-md bg-zinc-950 dark:bg-zinc-400 px-3 py-2 text-sm font-semibold text-white shadow-sm flex items-center space-x-2 text-red-600 hover:text-red-800'
-                  %>
-                </div>
-              </div>
-            <% end %>
-          </div>
-
-          <div class="sm:col-span-6 p-4">
-            <%= custom_label_tag 'Merge impact cards' %>
-            <div class="mt-2">
-              <p class="text-sm/6 text-gray-600">Merge this impact card and all associated data with another card.</p>
-              <div class="flex justify-end">
-                <%=
-                  link_to 'Merge Cards',
-                  impact_card_path(@scorecard),
-                  method: :delete,
-                  data: { confirm: 'Are you sure you want to delete this impact card?' },
-                  class: 'rounded-md bg-zinc-950 dark:bg-zinc-400 px-3 py-2 text-sm font-semibold text-white shadow-sm flex items-center space-x-2 text-red-600 hover:text-red-800'
-                %>
-              </div>
-            </div>
-
-          </div>
-        <% end %>
-      <% end %>
 
       <%= render 'form_buttons', form:, cancel_path: @scorecard.persisted? ? impact_card_path(@scorecard) : impact_cards_path %>
     <% end %>
   <% end %>
 
-  <%= form_with model: @scorecard, url: impact_card_path(@scorecard), method: :delete, data: { turbo: false }, scope: :impact_card, id: "delete_impact_card" %>
+  <div class="mx-auto max-w-4xl pt-24">
+    <%= render 'sharing', impact_card: @scorecard %>
+    <%= render 'danger_zone', impact_card: @scorecard %>
+  </div>
 </div>
 
