1050 added edit, delete and merge impact card features

--- a/app/views/application/_form_header.html.erb
+++ b/app/views/application/_form_header.html.erb
@@ -1,4 +1,8 @@
 <h1 class="text-2xl/8 font-semibold text-zinc-950 sm:text-xl/8 dark:text-white">
-  <%= record.persisted? ? "Edit #{record.name.presence || record.model_name.human }" : "New #{record.model_name.human}" %>
+  <%- if local_assigns[:title] %>
+    <%= title %>
+  <% else %>
+    <%= record.persisted? ? "Edit #{record.name.presence || record.model_name.human }" : "New #{record.model_name.human}" %>
+  <% end %>
 </h1>
 <hr role="presentation" class="my-10 mt-6 w-full border-t border-zinc-950/10 dark:border-white/10">
