--- a/app/views/impact_cards/_danger_zone.html.erb
+++ b/app/views/impact_cards/_danger_zone.html.erb
@@ -29,13 +29,11 @@
     <div class="sm:col-span-6 p-4">
       <%= custom_label_tag 'Merge impact cards' %>
       <div class="mt-2">
-        <p class="text-sm/6 text-gray-600">Merge this impact card and all associated data with another card.</p>
+        <p class="text-sm/6 text-gray-600">Merge this impact card and all associated data into another card.</p>
         <div class="flex justify-end">
           <%=
             link_to 'Merge Cards',
-            impact_card_path(impact_card),
-            method: :delete,
-            data: { confirm: 'Are you sure you want to delete this impact card?' },
+            new_impact_card_merge_path(impact_card),
             class: 'rounded-md bg-zinc-950 dark:bg-zinc-400 px-3 py-2 text-sm font-semibold text-white shadow-sm flex items-center space-x-2 text-red-600 hover:text-red-800'
           %>
         </div>
