--- a/app/views/impact_cards/_danger_zone.html.erb
+++ b/app/views/impact_cards/_danger_zone.html.erb
@@ -29,7 +29,7 @@
     <div class="sm:col-span-6 p-4">
       <%= custom_label_tag 'Merge impact cards' %>
       <div class="mt-2">
-        <p class="text-sm/6 text-gray-600">Merge this impact card and all associated data into another card.</p>
+        <p class="text-sm/6 text-gray-600">Merge another impact card and all its associated data into this card.</p>
         <div class="flex justify-end">
           <%=
             link_to 'Merge Cards',
