--- a/app/views/impact_cards/_danger_zone.html.erb
+++ b/app/views/impact_cards/_danger_zone.html.erb
@@ -2,7 +2,7 @@
   <%= render 'section_header', title: 'Danger Zone' %>
   <%= render 'section_body', class: 'border border-red-500 rounded-lg gap-y-0' do %>
     <div class="sm:col-span-6 border-b border-gray-900 p-4">
-      <%= custom_label_tag 'Delete this impact card card' %>
+      <%= custom_label_tag 'Delete this impact card' %>
       <div class="mt-2">
         <p class="text-sm/6 text-gray-600">This action cannot be undone. This will permanently delete the impact card and all associated data.</p>
         <div class="flex justify-end">
