--- a/app/views/checklist_items/_link.html.erb
+++ b/app/views/checklist_items/_link.html.erb
@@ -4,7 +4,7 @@
     link_to(
       edit_checklist_item_path(checklist_item),
       data: { turbo_frame: dom_id(checklist_item) },
-      class: 'flex items-center space-x-2 text-gray-700 dark:text-white hover:bg-gray-200 dark:hover:bg-gray-800'
+      class: "flex items-center space-x-2 text-gray-700 dark:text-white hover:bg-gray-200 dark:hover:bg-gray-800 rounded-sm #{local_assigns[:link_class]}"
     ) do %>
       <%= checklist_item.characteristic.name %>
       <%= render_icon(:chat) if checklist_item.comment.present? %>
