--- a/app/views/shared/thematic_map.html.erb
+++ b/app/views/shared/thematic_map.html.erb
@@ -1,8 +1,8 @@
 <%= render 'labels/stylesheet', labels: @stakeholder_types %>
 
 <div class="mx-auto max-w-6xl" data-controller="thematic-map">
-  <%= render 'impact_cards/summary', impact_card: @scorecard %>
-  <%= render 'impact_cards/tabs', impact_card: @scorecard %>
+  <%= render 'shared/summary', impact_card: @scorecard %>
+  <%= render 'shared/tabs', impact_card: @scorecard %>
 
   <%= render 'impact_cards/thematic_map/graph', impact_card: @scorecard %>
 </div>
