--- a/app/views/impact_cards/_grid.html.erb
+++ b/app/views/impact_cards/_grid.html.erb
@@ -1,9 +1,9 @@
 <%= render 'labels/stylesheet', labels: @subsystem_tags %>
 
-<div class="text-left" data-controller="grid" data-grid-mode="<%= @scorecard.grid_mode %>">
+<div class="text-left" data-controller="grid" data-grid-mode="<%= impact_card.grid_mode %>">
   <div class="flex justify-between items-center mb-4">
 
-    <%= form_with url: impact_card_path(@scorecard), method: :get, data: { grid_target: 'filterForm' } do |form| %>
+    <%= form_with url: search_url, method: :get, data: { grid_target: 'filterForm' } do |form| %>
     <div class="flex space-x-4">
       <div class="pt-2 flex justify-center items-center"><span class="text-sm font-medium text-gray-900 dark:text-white">Filter by:</span></div>
       <div>
@@ -26,7 +26,7 @@
         <%=
           form.multi_select(
             :statuses,
-            multi_select_options_for_statuses(@statuses, @selected_statuses, @scorecard),
+            multi_select_options_for_statuses(@statuses, @selected_statuses, impact_card),
             { placeholder: 'Select statuses...' },
             { include_hidden: false, data: { grid_target: "statuses" } }
           )
@@ -34,26 +34,32 @@
       </div>
     </div>
     <% end %>
-    <div>
-      <%= link_to 'Print', '#', class: 'inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500', onclick: 'window.print()' %>
-    </div>
   </div>
 
   <div class="grid grid-cols-4 text-white mt-4" data-grid-target="grid">
-    <% @scorecard_grid.each do |data| %>
+    <% impact_card_grid.each do |data| %>
       <div class="col-span-1 mb-2">
-        <h3 class="text-sm font-medium text-gray-900 dark:text-white truncate">
-          <%= link_to data.dig('initiative', :name), impact_card_initiative_path(impact_card_id: @scorecard.id, id: data.dig('initiative', :id)), title: data.dig('initiative', :name) %>
+        <h3
+          class="text-sm font-medium text-gray-900 dark:text-white truncate"
+          title="<%= data.dig('initiative', :name) %>"
+          data-subsystem-tags="<%= data.dig('initiative', :subsystem_tag_names).to_json %>"
+        >
+          <% if signed_in? %>
+            <%= link_to data.dig('initiative', :name), impact_card_initiative_path(impact_card_id: impact_card.id, id: data.dig('initiative', :id)), title: data.dig('initiative', :name) %>
+          <% else %>
+            <%= data.dig('initiative', :name) %>
+          <% end %>
         </h3>
       </div>
       <div class="col-span-3 w-full mb-2 ml-2">
         <div class="flex flex-wrap gap-y-2">
+          <%# TODO: Move grouping of data to impact_card_grid %>
           <%- data.except('initiative').values.group_by { |value| value[:focus_area_id] }.each do |focus_area_id, grouped_checklist_item_data| %>
             <div class="flex flex-nowrap items-center gap-1 mr-2">
-              <%# TODO Move the lookup of the focus area details to @scorecard_grid %>
+              <%# TODO: Move the lookup of the focus area details to impact_card_grid %>
               <%= focus_area_grid_element(grouped_checklist_item_data.first) %>
               <%- grouped_checklist_item_data.each do |checklist_item_data| %>
-                <%= checklist_list_item_grid_element(checklist_item_data:, grid_mode: @scorecard.grid_mode) %>
+                <%= checklist_list_item_grid_element(checklist_item_data:, grid_mode: impact_card.grid_mode) %>
               <% end %>
             </div>
           <% end %>
