--- a/app/views/impact_cards/show.html.erb
+++ b/app/views/impact_cards/show.html.erb
@@ -2,6 +2,6 @@
   <%= render 'impact_cards/summary', impact_card: @scorecard %>
   <%= render 'impact_cards/tabs', impact_card: @scorecard %>
   <div>
-    <%= render 'impact_cards/grid' %>
+    <%= render 'impact_cards/grid', impact_card: @scorecard, impact_card_grid: @scorecard_grid, search_url: impact_card_path(@scorecard) %>
   </div>
 </div>
