--- a/app/views/shared/stakeholder_network.html.erb
+++ b/app/views/shared/stakeholder_network.html.erb
@@ -1,7 +1,6 @@
 <%= render 'labels/stylesheet', labels: @stakeholder_types %>
 <div class="mx-auto max-w-6xl" data-controller="stakeholder-network">
-  <%= render 'impact_cards/summary', impact_card: @scorecard %>
-  <%= render 'impact_cards/tabs', impact_card: @scorecard %>
-
+  <%= render 'shared/summary', impact_card: @scorecard %>
+  <%= render 'shared/tabs', impact_card: @scorecard %>
   <%= render 'impact_cards/stakeholder_network/graph', impact_card: @scorecard %>
 </div>
